# PythonDRFTestForWork

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: build.yml
apps/video/: models.py  serializers.py  services.py  tasks.py  urls.py  utils.py  views.py
apps/video/migrations/: 0001_initial.py  0002_rename_video_video_file_video_is_processing_and_more.py
apps/video/tests/: utils.py
apps/video/tests/services/: test_video_service.py
apps/video/tests/tasks/: test_change_resolution_of_video.py
apps/video/tests/views/: test_video_delete.py  test_video_get.py  test_video_patch.py  test_video_upload.py
deploy/config/: gunicorn_config.py  nginx.conf
drf_ffmpeg/: asgi.py  celery.py  env.py  settings.py  urls.py  wsgi.py
